# ek-chat

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/modules/: chat_manager.py  logger.py  response_generator.py  schema.py
frontend/: .gitkeep  package.json
frontend/app/: layout.tsx  page.tsx
